--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 :root{
   --cat-color: #ffffff;
@@ -14,7 +14,7 @@
   user-select: none;
 }
 body {  
-  background-color: rgb(0, 0, 0) !important;
+  background-color: rgb(255, 255, 255) !important;
 }
 
 ::-webkit-scrollbar {
@@ -38,13 +38,13 @@ canvas {
 }
 
 #canvas {
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
 }
 
 .username-lg {
   font-family: 'Poppins', sans-serif;
   font-size: 65px;
-  color: #000;
+  color: rgb(255, 255, 255);
   transition: color 0.7s linear; 
 }
 
