cat animation js  fix

--- a/src/styleContact.css
+++ b/src/styleContact.css
@@ -390,15 +390,15 @@
 
     .container2 {
       zoom:20%;
-      left: 15%;
+      left: 20%;
       top: 75%; 
     }
     
     .table2 {
-      width: 370vw;
+      width: 390vw;
     }
     
-    .social-media-icon2 {
+    .socialmediaicon2 {
       font-size: 24px;
    
     }
